Details
-
Bug
-
Status: Resolved
-
P4
-
Resolution: Fixed
-
17
-
b20
Description
Nodes of different type, name, etc. which reuse the same idx are treated as equal when IGV compares graphs across the same group. This creates confusion e.g. in the graph snapshot bar, where a node can be shown as inserted twice, or when diffing two graphs.
STEPS TO REPRODUCE IT:
1. Build and run IGV
2. File -> Open -> select small.xml (attached as small.zip) -> OK
3. In the "Outline" window group, expand "static jint Factorial.fac(jint)" and double-click on "After Parsing"
4. Deselect toolbar option "Show neighboring nodes of fully visible nodes semi-transparent"
5. Double-click on node (54 CallStaticJava)
6. In the "Outline" window group, double-click on "Global code motion"
7. The highlighted node changes to (54 loadConI)
STEPS TO REPRODUCE IT:
1. Build and run IGV
2. File -> Open -> select small.xml (attached as small.zip) -> OK
3. In the "Outline" window group, expand "static jint Factorial.fac(jint)" and double-click on "After Parsing"
4. Deselect toolbar option "Show neighboring nodes of fully visible nodes semi-transparent"
5. Double-click on node (54 CallStaticJava)
6. In the "Outline" window group, double-click on "Global code motion"
7. The highlighted node changes to (54 loadConI)
Attachments
Issue Links
- blocks
-
JDK-8254145 Improve IdealGraphVisualizer tool
-
- Resolved
-
-
JDK-8265587 IGV: track nodes across matching
-
- Resolved
-